[package]
name = "nolana"
version = "1.0.0"
edition = "2021"
authors = ["Arexon"]
description = "Speedy Molang parser and interpreter library."

[dependencies]
logos = "0.12.1"
thiserror = "1.0.38"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
